@@ -1,0 +1,48 @@
+﻿// Copyright 2004-2009 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.Components.DictionaryAdapter
+{
+	using System;
+	using System.Reflection;
+
+	[AttributeUsage(AttributeTargets.Interface, AllowMultiple = true)]
+	public class DictionaryInitializeAttribute : DictionaryBehaviorAttribute
+	{
+		public DictionaryInitializeAttribute(Type initializerType)
+		{
+			if (initializerType == null)
+			{
+				throw new ArgumentNullException("initializerType");
+			}
+
+			if (!typeof(IDictionaryInitializer).IsAssignableFrom(initializerType))
+			{
+				throw new ArgumentException("initializerType does not implement IDictionaryInitializer");
+			}
+
+			Constructor = initializerType.GetConstructor(Type.EmptyTypes);
+			if (Constructor == null)
+			{
+				throw new ArgumentException("initializerType does not have a public empty constructor");
+			}
+
+			InitializerType = initializerType;
+		}
+
+		public Type InitializerType { get; private set; }
+
+		public ConstructorInfo Constructor { get; set; }
+	}
+}
