@@ -1,6 +1,8 @@
 RC 4
 ====
 
+- Added DictionaryAdapter initialization hook
+
 - Added support for IDataErrorInfo
 
 - Simplied internals and added support for IEditableObject
